--- a/style.css
+++ b/style.css
@@ -6,18 +6,11 @@ html, body, #main {
 body {
   font-family: 'Spartan', sans-serif;
   font-weight: 300;
-  font-size: 2vh;
+  font-size: 14px;
   /* background: #cfaffc; */
   background: #B4D5D9;
   color: #faf8f4;
   text-align: center;
-}
-
-#main {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
 
 #banner {
@@ -44,14 +37,20 @@ body {
 }
 
 #navbar {
-  display: inline-block;
-  font-size: 14px;
-  word-spacing: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-#logo {
-  height: 150px;
-  width: 150px;
+#mirror {
+  margin-left: 32px;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+#menu {
+  margin-right: 32px;
+  margin-top: 4px;
 }
 
 a {
@@ -71,6 +70,18 @@ a {
   margin-left: 12px;
 }
 
-#footer {
+#logo {
+  height: 200px;
+  width: 200px;
+}
 
+#content {
+  position: relative;
+  top: 120px;
+}
+
+#footer {
+  position: fixed;
+  bottom: 12px;
+  left: 32px;
 }
