html and css edits

--- a/account.css
+++ b/account.css
@@ -14,10 +14,16 @@ body {
   text-align: center;
 }
 
+#main {
+  height: 100%;
+}
+
 #banner {
   height: 40px;
   overflow: hidden;
   position: relative;
+  background-color: #adcacd;
+  z-index: 2;
 }
 
 #scrolltext {
@@ -36,10 +42,19 @@ body {
  100% {transform: translateX(-100%);}
 }
 
-#navbar {
+#navbarflex {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: #adcacd;
+
+  padding-top: 40px;
+  padding-bottom: 16px;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 #mirror {
@@ -50,7 +65,6 @@ body {
 
 #menu {
   margin-right: 32px;
-  /* margin-top: 4px; */
 }
 
 a {
@@ -70,26 +84,34 @@ a {
   margin-left: 12px;
 }
 
-#logo {
-  height: 200px;
-  width: 200px;
+#pf {
+  height: 380px;
+  width: 380px;
 }
 
 #content {
   position: relative;
-  top: 120px;
+  top: 80px;
+  height: 3600px;
+}
 
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+#btab {
+  margin-left: 15px;
 }
 
 #footer {
-  position: fixed;
-  bottom: 16px;
-  left: 32px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+
+  padding-top: 16px;
+  padding-left: 32px;
+  padding-bottom: 16px;
+  background-color: #adcacd;
   font-size: 12px;
 }
