--- a/privacy.css
+++ b/privacy.css
@@ -7,17 +7,21 @@ body {
   font-family: 'Spartan', sans-serif;
   font-weight: 300;
   font-size: 18px;
-  /* background: #cfaffc; */
-  /* background: #B4D5D9; */
   background: #adcacd;
   color: #faf8f4;
   text-align: center;
+}
+
+#main {
+  height: 100%;
 }
 
 #banner {
   height: 40px;
   overflow: hidden;
   position: relative;
+  background-color: #adcacd;
+  z-index: 2;
 }
 
 #scrolltext {
@@ -36,10 +40,19 @@ body {
  100% {transform: translateX(-100%);}
 }
 
-#navbar {
+#navbarflex {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: #adcacd;
+
+  padding-top: 40px;
+  padding-bottom: 16px;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 #mirror {
@@ -50,7 +63,6 @@ body {
 
 #menu {
   margin-right: 32px;
-  /* margin-top: 4px; */
 }
 
 a {
@@ -70,26 +82,39 @@ a {
   margin-left: 12px;
 }
 
-#logo {
-  height: 200px;
-  width: 200px;
+#pf {
+  height: 380px;
+  width: 380px;
 }
 
 #content {
   position: relative;
-  top: 120px;
+  top: 80px;
+  height: 1350px;
 
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-left: 80px;
+  margin-right: 80px;
+
+  line-height: 2em;
+}
+
+#btab {
+  margin-left: 15px;
 }
 
 #footer {
-  position: fixed;
-  bottom: 16px;
-  left: 32px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+
+  padding-top: 16px;
+  padding-left: 32px;
+  padding-bottom: 16px;
+  background-color: #adcacd;
   font-size: 12px;
 }
